css/main.css
html {
    font-size: 0.8rem;
}

#map_container {
    height: 480px; 
}

/******************************************************
TIMELINE
*/
.timeline {
    list-style: none;
    padding: 10px 0 20px;
    position: relative;
}

.timeline:before {
    top: 0;
    bottom: 0;
    position: absolute;
    content: " ";
    width: 3px;
    background-color: #aaaaaa;
    left: 50%;
    margin-left: -1.5px;
}
.timeline > li {
    margin-bottom: 20px;
    position: relative;
}

.timeline > li:before, .timeline > li:after {
    content: " ";
    display: table;
}
.timeline > li:after {
    clear: both;
}
.timeline > li:before, .timeline > li:after {
    content: " ";
    display: table;
}
.timeline > li:after {
    clear: both;
}
.timeline > li > .timeline-panel {
    width: 50%;
    float: left;
    border: 1px solid #d4d4d4;
    background-color: #fff;
    border-radius: 5px;
    padding: 10px;
    position: relative;
    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
}

.timeline > li.timeline-inverted + li:not(.timeline-inverted),
.timeline > li:not(.timeline-inverted) + li.timeline-inverted {
    margin-top: -60px;
}
.timeline > li:not(.timeline-inverted) {
    padding-right:90px;
}
.timeline > li.timeline-inverted {
    padding-left:90px;
}
.timeline > li > .timeline-panel:before {
    position: absolute;
    top: 26px;
    right: -15px;
    display: inline-block;
    border-top: 15px solid transparent;
    border-left: 15px solid #ccc;
    border-right: 0 solid #ccc;
    border-bottom: 15px solid transparent;
    content: " ";
}
.timeline > li > .timeline-panel:after {
    position: absolute;
    top: 27px;
    right: -14px;
    display: inline-block;
    border-top: 14px solid transparent;
    border-left: 14px solid #fff;
    border-right: 0 solid #fff;
    border-bottom: 14px solid transparent;
    content: " ";
}
.timeline > li > .timeline-badge {
    color: #fff;
    width: 50px;
    height: 50px;
    line-height: 40px;
    font-size: 1.4em;
    text-align: center;
    position: absolute;
    top: 20px;
    left: 50%;
    margin-left: -25px;
    background-color: #999999;
    z-index: 100;
    border: 4px solid #aaaaaa; 
    border-top-right-radius: 50%;
    border-top-left-radius: 50%;
    border-bottom-right-radius: 50%;
    border-bottom-left-radius: 50%;
}
.timeline > li.timeline-inverted > .timeline-panel {
    float: right;
}
.timeline > li.timeline-inverted > .timeline-panel:before {
    border-left-width: 0;
    border-right-width: 15px;
    left: -15px;
    right: auto;
}
.timeline > li.timeline-inverted > .timeline-panel:after {
    border-left-width: 0;
    border-right-width: 14px;
    left: -14px;
    right: auto;
}
.timeline-title {
    margin-top: 0;
    color: inherit;
}
.timeline-body > p, .timeline-body > ul {
    margin-bottom: 0;
}
.timeline-body > p + p {
    margin-top: 5px;
}

.timeline-heading p {
    margin-bottom: 0px;
}

/* PANELS */
li.type-general .timeline-panel {
    border-top: 8px solid darkblue;
}
li.type-doc .timeline-panel {
    border-top: 8px solid rgb(0, 112, 6);
}
li.type-incident .timeline-panel, li.type-probleme .timeline-panel {
    border-top: 8px solid rgb(173, 0, 0);
}
li.type-event .timeline-panel, li.type-talk .timeline-panel, li.type-podcast .timeline-panel, li.type-broadcast .timeline-panel {
    border-top: 8px solid rgb(212, 145, 0);
}
li.type-fragdenstaat .timeline-panel {
    border-top: 8px solid #0047e1;
}
li.type-news .timeline-panel {
    border-top: 8px solid #8000a7;
}
/* BADGES */
li.type-general .timeline-badge {
    background-color: darkblue;
}
li.type-doc .timeline-badge {
    background-color: rgb(0, 112, 6);
}
li.type-incident .timeline-badge, li.type-probleme .timeline-badge {
    background-color: rgb(173, 0, 0);
}
li.type-event .timeline-badge, li.type-talk .timeline-badge, li.type-podcast .timeline-badge, li.type-broadcast .timeline-badge {
    background-color: rgb(212, 145, 0);
}
li.type-fragdenstaat .timeline-badge {
    background-color: #0047e1;
}
li.type-news .timeline-badge {
    background-color: #8000a7;
}

/******************************************************************************************************************************/
/* WIDGETS ********************************************************************************************************************/
/******************************************************************************************************************************/
.embed {
    margin-top: 10px; 
}
.embed-placeholder {
    background-color: rgb(212, 212, 212);
    width: 100%; 
    /*height: 100px; */
    padding: 10px;
    text-align: center;
}
.embed-placeholder button {
    padding: 5px;
    margin-top: 10px;
}
.embed-widget {
    margin-top: 10px; 
}

@media screen and (max-width: 1435px) {
    .podlove {
        height: 380px;
        width: unset;
    }
}

/* Frag den Staat-Widget */
.fds-widget {
    border: 3px solid #0047e1;
    min-height: 200px;
    border-radius: 4px;
}
.fds-widget .fds-title {
    background-color: #0047e1;
    color: white; 
    font-weight: bold;
    padding: 5px 3px;
}
.fds-widget .fds-content {
    padding: 5px 5px;
}

.fds-content .fds-content-title {
    font-weight: bold;
    display: block;
    margin-top: 5px; 
}

.fds-content .fds-credit {
    border-top: 1px dotted #0047e1;
    margin-top: 10px;
    padding: 3px;
    font-size: smaller;
}
.fds-content .fds-status-badge {
    background-color: rgb(68, 68, 68);
    color: white; 
    padding: 3px 5px;
    border-radius: 3px;
    font-weight: bold;
    line-height: 2em;
}
.fds-content .fds-status-badge.fds-status-resolved {
    background-color: darkgreen;
}
.fds-content .fds-status-badge.fds-status-awaiting_response {
    background-color: orangered;
}
/*.fds-content .fds-credit::before {
    content: url('/assets/fds/logo.svg'); 
    width: 100px; 
} */
.fds-content .fds-credit button {
    border: 1px solid #0047e1;
    border-radius: 3px;
    background-color: #0047e1; 
    color: white; 
    font-weight: bold;
    margin-top: 5px;
    padding: 6px;
    display: block;
}

/* Gitlab-Widget */
.gl-widget {
    border: 3px solid rgb(41, 41, 97);
    min-height: 200px;
    border-radius: 4px;
}
.gl-widget .gl-title {
    background-color: rgb(41, 41, 97);
    color: white; 
    font-weight: bold;
    padding: 5px 3px;
}
.gl-widget .gl-content {
    padding: 5px 5px;
}

.gl-content .gl-content-title {
    font-weight: bold;
    display: block;
    margin-top: 5px; 
}

.gl-content .gl-credit {
    border-top: 1px dotted rgb(41, 41, 97);
    margin-top: 10px;
    padding: 3px;
    font-size: smaller;
}
.gl-content .gl-status-badge {
    background-color: rgb(68, 68, 68);
    color: white; 
    padding: 3px 5px;
    border-radius: 3px;
    font-weight: bold;
    line-height: 2em;
}
.gl-content .gl-status-badge.gl-status-resolved {
    background-color: darkgreen;
}
.gl-content .gl-status-badge.gl-status-awaiting_response {
    background-color: orangered;
}
/*.gl-content .gl-credit::before {
    content: url('/assets/fds/gitlab-logo-gray-stacked-rgb.svg'); 
    width: 100px; 
} */
.gl-content .gl-credit button {
    border: 1px solid rgb(41, 41, 97);
    border-radius: 3px;
    background-color: rgb(41, 41, 97); 
    color: white; 
    font-weight: bold;
    margin-top: 5px;
    padding: 6px;
    display: block;
}

.gl-content-gltext img {
    max-width: 100%;
}

blockquote {
    text-indent: -0.45em;
    font-style: italic;
    font-family: Georgia;
}
@supports ( hanging-punctuation: first) {
    blockquote {
        text-indent: 0;
        hanging-punctuation: first;
    }
}

blockquote::before {
    content: open-quote;
}
blockquote::after {
    content: close-quote;
}
blockquote {
    quotes: "“" "”" "‘" "’";
}

